# ROS2-Point-Cloud-Mapping

./: .gitignore  .neotest-gtest.lua  CMakeLists.txt  CMakePresets.json  depth_camera_world.sdf  justfile  package.xml  test_pointcloud_publisher.py  vim_teleop.py
include/minimal_mapping_tool/: cloud_mapper.hpp  main_window.hpp  ros_node.hpp
src/: cloud_mapper.cpp  gpu_icp.py  main.cpp  main_window.cpp  ros_node.cpp
tests/: test_cloud_mapper.cpp
