<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minimal_mapping_tool</name>
  <version>1.0.0</version>
  <description>Minimal maintainable Point Cloud Mapping Tool</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <depend>libqt5-core</depend>
  <depend>libqt5-widgets</depend>
  <depend>libqt5-gui</depend>
  <depend>libvtk9-dev</depend>
  <depend>libpcl-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
